# eve-market-tool

./: .claudeignore  .dockerignore  .env.example  .env.production  .gitignore  CLAUDE.md  Dockerfile  README.md  deploy.sh  deploy_auto.py  docker-compose.yml  eve  explore_sde.py  import_blueprints.py  install.sh  pyproject.toml  refresh_hot_items.py  resolve_items.py  resolve_items_sde.py  seed_regions.py  test_alert.py  test_manufacturing.py  test_trade.py
alembic/: env.py
alembic/versions/: 001_initial_schema.py
app/: main.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/endpoints/: alerts.py  arbitrage.py  auth.py  dashboard.py  items.py  manufacturing.py  regions.py  station_trading.py
app/core/: config.py  database.py  esi.py  security.py
app/models/: alert.py  base.py  item.py  manufacturing.py  market.py  region.py  trading.py  user.py
app/repositories/: alert.py  item.py  region.py  trading.py
app/schemas/: arbitrage.py  common.py  dashboard.py  item.py  manufacturing.py  region.py  trading.py
app/services/: arbitrage_engine.py  dashboard.py  manufacturing.py  market_fetcher.py  price_alerter.py  sde_loader.py  station_trading.py
app/tasks/: jobs.py  scheduler.py
app/templates/: base.html
app/templates/dashboard/: alerts.html  arbitrage.html  manufacturing.html  overview.html  trading.html
static/css/: app.css
static/js/: app.js
tests/unit/: test_esi_client.py  test_manufacturing.py  test_security.py
